--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', serif;
+  box-sizing: border-box;
+}
+
+html {
+  color: rgba(163, 201, 242, 1);
+  background-color: #131315;
+}
